--- a/contact.html
+++ b/contact.html
@@ -75,16 +75,16 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <section id="pre-loader">
+    <!-- <section id="pre-loader">
         <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
-    </section>
+    </section> -->
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
-                        <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+                        <a href="/" class="logo" alt="crayond"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
@@ -160,12 +160,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
-                        <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                        <a href="/" alt="caryond" style="text-decoration: none;">
+                            <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                        </a>
                         <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                         <p class="fontGraphikRegular">All rights reserved</p>
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/who-we-are.html"  alt="Company" style="color: unset;">
+                        <a href="/who-we-are"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
                                     Who we are
                             </span>
@@ -230,26 +232,26 @@
                         </div> -->
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                             style="display: flex;justify-content: flex-start;">
-                            <samp class="social_icon">
-                                <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
-                                <i class="fa fa-linkedin " aria-hidden="true"></i>
-                                </a>
-                            </samp>
-                            <samp class="social_icon">
-                                <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
-                                <i class="fa fa-facebook " aria-hidden="true"></i>
-                                </a>
-                            </samp>
-                            <samp class="social_icon">
-                                    <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
-                                <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                                </a>
-                            </samp>
-                            <samp class="social_icon">
-                                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
-                                <i class="fa fa-twitter " aria-hidden="true"></i>
-                                    </a>
-                            </samp>
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                                <samp class="social_icon">
+                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
+                                </samp>
+                            </a>
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                                <samp class="social_icon">
+                                 <i class="fa fa-facebook " aria-hidden="true"></i>
+                                </samp>
+                            </a>
+                            <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
+                                <samp class="social_icon">
+                                 <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                                </samp>
+                            </a>
+                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                                <samp class="social_icon">
+                                 <i class="fa fa-twitter " aria-hidden="true"></i>
+                                </samp>
+                            </a>
                         </div>
                         <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                             <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
@@ -266,26 +268,26 @@
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                             style="display: flex;justify-content: flex-start; display: none;">
-                            <samp class="social_icon">
-                               <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                                <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
-                                </a>
-                            </samp>
+                                </samp>
+                            </a>
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
                             <samp class="social_icon">
-                                <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
                                 <i class="fa fa-facebook " aria-hidden="true"></i>
-                                </a>
                             </samp>
-                            <samp class="social_icon">
-                                <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
+                           </a>
+                           <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                                <samp class="social_icon">
                                     <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                                </a>
-                            </samp>
-                            <samp class="social_icon">
-                                <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
+                                </samp>
+                            </a>
+                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                                <samp class="social_icon">
                                 <i class="fa fa-twitter " aria-hidden="true"></i>
-                                </a>
                             </samp>
+                        </a>
                         </div>
     
                     </div>
