--- a/opportunities.html
+++ b/opportunities.html
@@ -83,7 +83,7 @@
           <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
               <div class="row">
                   <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
-                      <a href="#" class="logo">
+                      <a href="#" class="logo" alt="crayond">
                           <img alt="logo-crayond@2x" src="./images/logo-crayond@2x.jpg" />
                       </a>
                   </div>
@@ -104,7 +104,7 @@
   </div>
   <div class="header_mobile" style="display: none;">
       <div class="crayond_logo_mobile">
-          <a href="/" class="logo" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+          <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
       </div>
       <div class="icon-container">
           <div id="menuicon">
@@ -145,7 +145,7 @@
     <figure>
       <video id="video_hight" loop="loop" muted="muted" autoplay="autoplay">
         <!-- <source src="./images/demonstration.mp4"/> -->
-        <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"/>
+        <source src="./images/demonstration.mp4" type="video/mp4"/>
       </video>
       <figcaption>
         <!-- <div class="col-md-12 video_title">
@@ -567,7 +567,9 @@
       <div class="container">
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 logo_address">
+                  <a href="/" alt="caryond" style="text-decoration: none;">
                   <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                  </a>
                   <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                   <p class="fontGraphikRegular">All rights reserved</p>
               </div>
@@ -635,52 +637,64 @@
                       <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
                       <p class="fontLatoBold footer_list"><span>GDPR</span></p>
                   </div> -->
-                  <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 social_icon_link"
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                       style="display: flex;justify-content: flex-start;">
-                      <samp class="social_icon">
-                          <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
-                          <i class="fa fa-linkedin " aria-hidden="true"></i>
-                          </a>
-                      </samp>
-                      <samp class="social_icon">
-                          <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
-                          <i class="fa fa-facebook " aria-hidden="true"></i>
-                          </a>
-                      </samp>
-                      <samp class="social_icon">
-                          <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
-                          <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                          </a>
-                      </samp>
-                      <samp class="social_icon">
-                          <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
-                          <i class="fa fa-twitter " aria-hidden="true"></i>
-                          </a>
-                      </samp>
+                      <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                          <samp class="social_icon">
+                           <i class="fa fa-linkedin " aria-hidden="true"></i>
+                          </samp>
+                      </a>
+                      <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                          <samp class="social_icon">
+                           <i class="fa fa-facebook " aria-hidden="true"></i>
+                          </samp>
+                      </a>
+                      <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
+                          <samp class="social_icon">
+                           <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                          </samp>
+                      </a>
+                      <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                          <samp class="social_icon">
+                           <i class="fa fa-twitter " aria-hidden="true"></i>
+                          </samp>
+                      </a>
                   </div>
-                  <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-2 col-xl-2 footer_address">
-                      <p class="fontGraphikRegular">hello@crayond.com</p>
+                  <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                      <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
+                          <p class="fontGraphikRegular" style="cursor: pointer;">hello@crayond.com</p>
+                      </a>
                   </div>
-                  <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-2 col-xl-2 footer_address">
-                          <p class="fontGraphikRegular">+(91) 74483 90100</p>
+                  <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                      <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
+                          <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
+                      </a>
                   </div>
-                  <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
                           <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                       style="display: flex;justify-content: flex-start; display: none;">
-                      <samp class="social_icon">
+                      <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                          <samp class="social_icon">
                           <i class="fa fa-linkedin " aria-hidden="true"></i>
-                      </samp>
+                          </samp>
+                      </a>
+                      <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
                       <samp class="social_icon">
                           <i class="fa fa-facebook " aria-hidden="true"></i>
                       </samp>
-                      <samp class="social_icon">
-                          <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                      </samp>
-                      <samp class="social_icon">
+                     </a>
+                     <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                          <samp class="social_icon">
+                              <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                          </samp>
+                      </a>
+                      <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                          <samp class="social_icon">
                           <i class="fa fa-twitter " aria-hidden="true"></i>
                       </samp>
+                  </a>
                   </div>
 
               </div>
