prodection code changed prodection issue

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                    Who you are?
+                    Who you are
                 </h1>
                 <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 <!-- <p class="banner--text fontLatoRegular">
@@ -496,7 +496,7 @@
                                 </span>
                                 <p class="card-title fontGraphikSemibold">Mastery</p>
                                 <p class="card-text fontLatoRegular">
-                                    Our mastery over the ‘how’ and ‘what’ of value-driven products makes us craft only the exceptional for you.
+                                    Our mastery over the ‘how’ and ‘what’ of modern products makes us craft only the exceptional for you.
                                 </p>
                             </div>
                         </div>
