--- a/opportunities.html
+++ b/opportunities.html
@@ -35,14 +35,14 @@
   <meta property="og:url" content="https://www.crayond.com/opportunities"> 
   <meta property="og:title" content="Join Crayon'd -  Give life to New Product Ideas" /> 
   <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-  <meta property="og:image" content="./images/OGImage.jpg" />
+  <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
   
   <!-- Twitter mate date     -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@crayondofficial">
   <meta name="twitter:title" content="Join Crayon'd -  Give life to New Product Ideas">
   <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
-  <meta name="twitter:image" content="./images/OGImage.jpg">
+  <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
   <!--Bootstrap  CSS -->  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
