--- a/who-we-are.html
+++ b/who-we-are.html
@@ -30,14 +30,14 @@
     <meta property="og:url" content="https://www.crayond.com/who-we-are"> 
     <meta property="og:title" content="About Crayon'd | Our Team & The Story Behind Crayond" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
-    <meta property="og:image" content="./images/OGImage.jpg" />
+    <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
 
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
     <meta name="twitter:title" content="About Crayon'd | Our Team & The Story Behind Crayond">
     <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
-    <meta name="twitter:image" content="./images/OGImage.jpg">
+    <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon_crayond.png">
@@ -601,58 +601,64 @@
                     ],
                     "2013": [
                         {
-                        "date": "MAY 2013",
-                        "dis": "An unprecedented shift to a place where we belong now."
+                            "date": "MAY 2013",
+                            "tagline": "New home",
+                            "dis": "An unprecedented shift to a place where we belong now."
                         },
                         {
-                        "date": "SEP 2013",
-                        "dis": "We sank in joy as we lived 1 year as a boot-strapped startup. No fancy parties, but we did celebrate hard."
+                           "date": "SEP 2013",
+                           "tagline": "One trip around the sun, done!",
+                           "dis": "We sank in joy as we lived 1 year as a boot-strapped startup. No fancy parties, but we did celebrate hard."
                         }
                     ],
                     "2014": [
                         {
                             "date": "AUG 2014",
-                            "dis": "The business continued to grow, so did the team. All was well, at least that's what it seemed to be."
+                            "tagline": "Odd feelings are up",
+                            "dis": "The business continued to grow, so did the team. All was well; at least that's what it seemed to be."
                         },
                         {
                             "date": "NOV 2014",
-                            "dis": "Every startup has twist and turns, you uncover so much in the journey. The moment of truth arrived that our culture had a hole and it was just human for people to breach the trust barriers."
+                            "tagline": "Some downtime",
+                            "dis": "Every startup has twist and turns that you uncover during the journey. The moment of truth arrived for the holes in our culture and it was just human for people to breach the trust barriers."
                         }
                     ],
                     "2016": [
                         {
                             "date": "JAN 2016",
-                            "dis": "We inducted few more fresh minds with the hope of a shoot at our great ambitions. We seemed to have gained pace more than what we did earlier. The grand plans were back to the drawing board, trying to align everyone."
+                            "tagline": "Restocking to rock again",
+                            "dis": "We inducted few more fresh minds with the hope of a shoot at our great ambitions. We seemed to have gained more pace than what we had earlier. The grand plans were back to the drawing board, trying to align everyone."
                         }
                     ],
                     "2017": [
                         {
                             "date":"SEP 2017",
-                            "dis":"Most startups don't make it past 6 months. Few do, but many don't make it past 5 years. We did, but we were challenged. An year of customer defaults squeezed us with cash crunch. After all, we fought all the way being bootstrapped. We wish all our cusomers had more empathy. It's hard when you don't even recognize your 5th anniversary. It was painful, but one of those moments that will build your grit"
+                            "tagline": "Strong tides sweep away...",
+                            "dis": "A year of customer defaults squeezed us toward a cash crunch. Regardless, we fought all the way being bootstrapped. We wish all our cusomers had more empathy. It's hard when you don't even recognize your 5th anniversary. It was painful, but one of those moments that just builds your grit."
                         },
                         {
                             "date":"DEC 2017",
-                            "dis":"It brought us to a new low and our team had shrunk and whoever stayed back were just hanging by a thread with their own apprehensions. The funny thing about the whole episode is that we were always filled with opportunities, just that we did not have people who recognized it. Well, how unlucky they were not to see the big picture."
+                            "tagline":"Some sand from the shore...",
+                            "dis": "Brought to a new low, our team shrunk. Whoever stayed, hung by threads of their own apprehensions.The funny thing about this period was that while we were filled with opportunities, we weren't filled with people who recognized them as such. How unlucky of them to not see the big picture!"
                         }
                     ],
                     "2018": [
                         {
                             "date":"JAN 2018",
-                            "dis":"Adversity is never new for the founder or the brand Crayon'd. After all, Crayon'd itself was born out of adversity. However, the question was 'Is there something left in the tank to rebuild?'. The silent roar was a BIG YES."
+                            "tagline":"But the castle remains unmoved.",
+                            "dis": "Adversity refounds Crayon'd. The question that asked ourselves was, 'Is there enough in the tank to rebuild?' The answer? A silent roar of a BIG YES. "
                         },
                         {
                             "date":"APR 2018",
-                            "dis":"We stabilized and were moving but not where we wanted to go. We realized we had to load ourselves with tons of aspiration. As they say, 'Larger the dream, greater the team'. The quest to build the dream team began! The next bunch of people came on board with full of life and aspirations. Crayon'd breathed a new life and the floor was on fire."
+                            "tagline":"Extra legs to reach faster",
+                            "dis": "We realized that we had to load ourselves with tons of aspiration. After all, larger the dream, greater should be the team! And so the quest began. The next bunch of people rolled on board and Crayon'd breathed a new life. The floor was on fire.",
                         }
                     ],
                     "2019": [
                         {
-                            "date":"NOV 2019",
-                            "dis":"Over the last 18 months, we focussed on our craft of building products and creating a culture that's worth celebrating. We are a team of ordinary people but with extra-ordinary ambitions. Step in to our space, we'll sweep you off the feet with our aspirations. Watch out for us while we disrupt the world in a gentle way with our creations!"
-                        },
-                        {
-                            "date":"DEC 2019",
-                            "dis":"Watch out for the creations from this young team who is ready to take on the world. Let's simply say, 'The best way to predict the future is to create it!'"
+                            "date":"Today",
+                            "tagline": "Climbing new heights",
+                            "dis": "Over the last 18 months, we focussed on our craft of building products and creating a culture that's worth celebrating. We are a team of ordinary people but with extra-ordinary ambitions. Step in to our space, we'll sweep you off the feet with our aspirations."
                         }
                     ]
                     }
@@ -662,9 +668,11 @@
         var date = "2012"
         $("#2012_timeline").addClass("active");
         if(data[date].length == 1){
-            $(".arrows").css("display", "none");
+            $(".carousel-control-prev").css("display", "none");
+            $(".carousel-control-next").css("display", "none");
         }else{
-            $(".arrows").css("display", "block");
+            $(".carousel-control-prev").css("display", "flex");
+            $(".carousel-control-next").css("display", "flex");
         }
         jQuery.each(data[date], function (index, value) {
             // alert(JSON.stringify(value))
@@ -697,9 +705,11 @@
         $(this).addClass("active");
         var date = $(this).data("title");
         if(data[date].length == 1){
-            $(".arrows").css("display", "none");
+            $(".carousel-control-prev").css("display", "none");
+            $(".carousel-control-next").css("display", "none");
         }else{
-            $(".arrows").css("display", "block");
+            $(".carousel-control-prev").css("display", "flex");
+            $(".carousel-control-next").css("display", "flex");
         }
         jQuery.each(data[date], function (index, value) {
             // alert(JSON.stringify(value))
