fix safari issues

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -679,7 +679,8 @@
         if (index == 0) {
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
-                            '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
+                            '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
+                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -688,7 +689,8 @@
         }else{
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
-                            '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
+                            '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
+                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -716,7 +718,8 @@
         if (index == 0) {
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
-                            '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
+                            '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
+                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -725,7 +728,8 @@
         }else{
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
-                            '<p class="fontGraphikRegular date" style="margin: 0;color: #2b2a35;">'+value.date+'</p>'+
+                            '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
+                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
