--- a/opportunities.html
+++ b/opportunities.html
@@ -83,7 +83,7 @@
           <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
               <div class="row">
                   <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
-                      <a href="#" class="logo" alt="crayond">
+                      <a href="/" class="logo" alt="crayond">
                           <img alt="logo-crayond@2x" src="./images/logo-crayond@2x.jpg" />
                       </a>
                   </div>
