fix safari browser issue in header

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <script src="https://wchat.freshchat.com/js/widget.js"></script>
     <!-- Freshchat -->
 
+    <!-- site ahrefs-site-verification -->
+    <meta name="ahrefs-site-verification" content="11e94c2e9775fda1d13ea86dec3c2b8de72ac7d67266d640dc9d273dd3cddc4c">
+
 
 
 </head>
