--- a/opportunities.html
+++ b/opportunities.html
@@ -82,12 +82,12 @@
       <div class="container">
           <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
               <div class="row">
-                  <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
+                  <div class="col-6 col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3 logo_area">
                       <a href="/" class="logo" alt="crayond">
                           <img alt="logo-crayond@2x" src="./images/logo-crayond@2x.jpg" />
                       </a>
                   </div>
-                  <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
+                  <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                       <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
                       <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                       <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
@@ -95,7 +95,7 @@
                       <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                       <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                   </div>
-                  <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
+                  <div class="col-6 col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                       <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'">TALK TO US</button>
                   </div>
               </div>
@@ -357,8 +357,8 @@
 <div class="col-md-12 col-xs-12 col-sm-12 fun_gallery" style="background-color: #f2f2f2"> 
   <div class="container">
     <div class="col-md-12 col-xs-12 col-sm-12 ambience_card" style="padding: 56px 0px 96px 0px">
-          <div class="col-md-4 imge_width" style="float: right;margin-top: 26px; height: 410px;">
-            <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
+          <div class="col-md-4 imge_width" style="float: right;margin-top: 38px; height: 420px;">
+            <!-- <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5> -->
             <img alt="05_ambiencepic" class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%;border-radius: 8px;">
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12">
@@ -377,7 +377,7 @@
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 ambience_card_mobile">
-              <h5 style="padding-bottom: 8px;text-align: center;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
+              <!-- <h5 style="padding-bottom: 8px;text-align: center;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5> -->
               <img alt="04_ambiencepic" class="img-responsive" style="width: 100%; padding: 20px 0px 90px 0px;" src="./images/04_ambiencepic.png" style="" >
         </div>
   </div>
@@ -613,7 +613,7 @@
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                   <a href="/contact"  alt="Company" style="color: unset;">
-                   <span class="fontLatoBold footer_menu">
+                   <span class="fontLatoBold footer_menu contact_footer_menu">
                       Contact
                   </span>
                   </a>
