fix safari browser issue in footer

--- a/opportunities.html
+++ b/opportunities.html
@@ -611,9 +611,9 @@
                       <li><span class="fontLatoRegular">FAQ</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list contact_footer_menu" style="margin: auto;">
                   <a href="/contact"  alt="Company" style="color: unset;">
-                   <span class="fontLatoBold footer_menu contact_footer_menu">
+                   <span class="fontLatoBold footer_menu">
                       Contact
                   </span>
                   </a>
