fix safari iphone video is not play

--- a/opportunities.html
+++ b/opportunities.html
@@ -141,9 +141,9 @@
     <!-- <button type="button" style="outline: none;color: #fff;font-size: 17px;" onclick="window.location.href = 'https://angel.co/thecrayond';"  class="btn btn-alt explore">Join Us</button> -->
   </div>
   <div class="hero-wrapper">
-  <div class="hero">
+  <div class="hero" style="background-color: #f2f2f2;">
     <figure>
-      <video id="video_hight" loop="loop" muted="muted" autoplay="autoplay">
+      <video id="video_hight" loop="loop" muted="muted" autoplay="autoplay" playsinline muted>
         <!-- <source src="./images/demonstration.mp4"/> -->
         <source src="./images/demonstration.mp4" type="video/mp4"/>
       </video>
