--- a/who-we-are.html
+++ b/who-we-are.html
@@ -72,9 +72,9 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <section id="pre-loader">
+    <!-- <section id="pre-loader">
         <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
-    </section>
+    </section> -->
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
