--- a/index.html
+++ b/index.html
@@ -570,7 +570,8 @@
                 <img src="./images/confetti (1).svg" alt="confetti" />
             </div>
             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
-                <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
+                <!-- <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1> -->
+                <h1 class="fontGraphikSemibold">100+ ideas shipped as scalable <br />products. Yours could be the next!</h1>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
                 <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
